--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -752,7 +752,7 @@ background_opacity 0.03
 #: this setting when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-background_image ~/.config/linux-cfg/kitty/barca.png
+background_image ~/dotfiles/Pictures/barca.png
 
 #: Path to a background image. Must be in PNG format.
 
