update: updating nvim  cfg

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -752,11 +752,14 @@ background_opacity 0.03
 #: this setting when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-background_image ~/dotfiles/Pictures/barca.png
+
+# background_image ~/dotfiles/Pictures/barca.png
+background_image ~/dotfiles/Pictures/cyber.png
+background_image ~/dotfiles/Pictures/daniel-liang-2016-11-22-1.png
 
 #: Path to a background image. Must be in PNG format.
 
-background_image_layout centered
+background_image_layout scaled
 
 #: Whether to tile or scale the background image.
 
@@ -772,7 +775,7 @@ dynamic_background_opacity no
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this setting by reloading the config is not supported.
 
-background_tint 0.4
+background_tint 0.3
 
 #: How much to tint the background image by the background color. The
 #: tint is applied only under the text area, not margin/borders. Makes
