--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -753,13 +753,11 @@ background_opacity 0.03
 #: dynamic_background_opacity was enabled in the original config.
 
 
-# background_image ~/dotfiles/Pictures/barca.png
-background_image ~/dotfiles/Pictures/cyber.png
-background_image ~/dotfiles/Pictures/daniel-liang-2016-11-22-1.png
+background_image ~/dotfiles/Pictures/barca.png
 
 #: Path to a background image. Must be in PNG format.
 
-background_image_layout scaled
+background_image_layout centered
 
 #: Whether to tile or scale the background image.
 
