--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,4 @@
 set -g prefix C-a
-
 #this help to make esc (go to normal mode from insert) instant
 set -sg escape-time 10
 # act like vim
@@ -27,3 +26,13 @@ run '~/.tmux/plugins/tpm/tpm'
 # git clone tmux-tmp
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # C-a + I to install the tmp plugins
+
+# Switch to window with Alt + 0 to Alt + 7
+bind -n M-0 select-window -t 0
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
