--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,8 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-
+# set tmux to start from 1.
+set -g base-index 1
 # # List of plugins
  set -g @plugin 'tmux-plugins/tpm'
  set -g @plugin 'dracula/tmux'
