--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,6 @@ set -g base-index 1
  set -g @dracula-show-left-icon session
  set -g status-position top
 
-# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
 
 #add ~/.tmux.conf file  and then run in terminal " tmux source ~/.tmux.conf"
 # git clone tmux-tmp
@@ -37,3 +35,10 @@ bind -n M-4 select-window -t 4
 bind -n M-5 select-window -t 5
 bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
+
+# cht.sh
+bind-key -r i run-shell "tmux neww cht.sh"
+
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
