--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -43,5 +43,12 @@
   "workbench.panel.defaultLocation": "right",
   "workbench.colorTheme": "GitHub Dark Default",
   "workbench.iconTheme": "material-icon-theme",
-  "workbench.sideBar.location": "right"
+  "workbench.sideBar.location": "right",
+  "github.copilot.enable": {
+    "*": false,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false
+  },
+  "extensions.ignoreRecommendations": true
 }
