--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -50,5 +50,6 @@
     "markdown": false,
     "scminput": false
   },
-  "extensions.ignoreRecommendations": true
+  "extensions.ignoreRecommendations": true,
+  "window.restoreWindows": "none"
 }
