--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,7 @@ bind -n M-5 select-window -t 5
 bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 
+bind = split-window -h -p 30
 # cht.sh
 bind-key -r i run-shell "tmux neww cht.sh"
 
