--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,7 @@ set -g base-index 1
  set -g @dracula-gpu-usage-label "GPU"
  set -g @dracula-show-flags true
  set -g @dracula-show-left-icon session
- set -g status-position top
+ set -g status-position bottom
 
 
 #add ~/.tmux.conf file  and then run in terminal " tmux source ~/.tmux.conf"
@@ -37,9 +37,6 @@ bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 
 bind = split-window -h -p 30
-# cht.sh
-bind-key -r i run-shell "tmux neww cht.sh"
-
 # Undercurl
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
