--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,21 +11,20 @@ bind-key l select-pane -R
 set -g base-index 1
 # # List of plugins
  set -g @plugin 'tmux-plugins/tpm'
- set -g @plugin 'dracula/tmux'
  set -g @plugin 'christoomey/vim-tmux-navigator'
- set -g @dracula-show-powerline true
- set -g @dracula-plugins "gpu-usage"
- set -g @dracula-gpu-usage-label "GPU"
- set -g @dracula-show-flags true
- set -g @dracula-show-left-icon session
  set -g status-position bottom
-
-
+#set -g @plugin 'egel/tmux-gruvbox'
+#set -g @tmux-gruvbox 'dark' # or 'light', 'dark-transparent', 'light-transparent'
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_date_format MYD
+set -g @tokyo-night-tmux_time_format 12H
 #add ~/.tmux.conf file  and then run in terminal " tmux source ~/.tmux.conf"
 # git clone tmux-tmp
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # C-a + I to install the tmp plugins
-
+# the left separator symbol is inversed with a transparent background, you can modify it with any symbol you like
+set -g @dracula-inverse-divider 
 # Switch to window with Alt + 0 to Alt + 7
 bind -n M-0 select-window -t 0
 bind -n M-1 select-window -t 1
