--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,9 @@ set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
+
+#tmux sessionizer
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 # Alacritty
 set -as terminal-features ",alacritty:RGB"
 # # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
