--- a/.gitconfig
+++ b/.gitconfig
@@ -3,3 +3,16 @@
 	email = mrsabir4@gmail.com
 [credential]
 	helper = store
+
+[core]
+    pager = delta
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    navigate = true  # use n and N to move between diff sections
+    dark = true      # or light = true, or omit for auto-detection
+
+[merge]
+    conflictstyle = zdiff3
