--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,11 @@
 set -g prefix C-a
 #this help to make esc (go to normal mode from insert) instant
 set -sg escape-time 10
+#source tmux
+bind-key r source-file ~/.tmux.conf; display-message "tmux sourced successfully!"
+set -g status-style bg=default
+set-option -g status-right ""
+set-option g status-fg grey
 # act like vim
 setw -g mode-keys vi
 bind-key h select-pane -L
@@ -15,7 +20,7 @@ set -g base-index 1
  set -g status-position bottom
 #set -g @plugin 'egel/tmux-gruvbox'
 #set -g @tmux-gruvbox 'dark' # or 'light', 'dark-transparent', 'light-transparent'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+# set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_date_format MYD
 set -g @tokyo-night-tmux_time_format 12H
