--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,10 +2,10 @@ set -g prefix C-a
 #this help to make esc (go to normal mode from insert) instant
 set -sg escape-time 10
 #source tmux
-bind-key r source-file ~/.tmux.conf; display-message "tmux sourced successfully!"
+bind-key r source-file ~/.tmux.conf; 
 set -g status-style bg=default
 set-option -g status-right ""
-set-option g status-fg grey
+set-option -g status-fg grey
 # act like vim
 setw -g mode-keys vi
 bind-key h select-pane -L
