--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,8 +46,10 @@ set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
-
+# fix color error
 set-option -g default-terminal "tmux-256color"
+# Toggle status bar with prefix + b
+bind b if '[ "$(tmux show -vg status)" = "on" ]' 'set -g status off' 'set -g status on'
 #tmux sessionizer
 bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 # Alacritty
