--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,13 +17,27 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+;; Base
+background = #191724
+;; Highlight Med
+background-alt = #21202e
+;; Text
+foreground = #e0def4
+;; Rose
+primary = #ebbcba
+;; Gold
+secondary = #f6c177	
+;; Love
+alert = #eb6f92
+;; Muted
+disabled = #6e6a86
+; background = #282A2E
+; background-alt = #373B41
+; foreground = #C5C8C6
+; primary = #F0C674
+; secondary = #8ABEB7
+; alert = #A54242
+; disabled = #707880
 [bar/mybar]
 width = 100%
 height = 16pt
@@ -32,7 +46,7 @@ radius = 6
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3pt
-border-size = 4pt
+border-size = 0pt
 border-color = #00000000
 padding-left = 0
 padding-right = 1
