--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,8 @@
 set -g prefix C-a
+unbind C-`
+bind C-` send-key `
+# tmux shortcut to open a new window named "therminal"
+bind-key t new-window -n "terminal"
 #this help to make esc (go to normal mode from insert) instant
 set -sg escape-time 10
 #source tmux
