--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,7 +3,7 @@ font-family = BerkeleyMono Nerd Font
 theme = catppuccin-frappe
 # font-family = SFMono Nerd Font 
 font-size = 20
-theme = GruvboxDarkHard
+theme = CyberpunkScarletProtocol
 shell-integration-features = no-cursor,sudo,no-title
 cursor-style = block
 adjust-cell-height = 35%
@@ -12,9 +12,6 @@ adjust-cell-height = 35%
 mouse-hide-while-typing = true
 mouse-scroll-multiplier = 2
 
-window-padding-balance = true 
 window-save-state = always
-macos-titlebar-style=transparent
-window-colorspace = "display-p3"
 background = 1C2021
-# foreground = d4be98
+window-decoration = false
