--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,8 +1,9 @@
 [window]
-opacity = 0.4
-padding.x = 7
-padding.y = 7
+opacity = 0.5
+padding.x = 5
+padding.y = 5
 [font]
 size = 16.0
+normal = { family = "CaskaydiaCove Nerd Font" }
 [env]
 term = "xterm-256color"
