--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,9 +1,9 @@
-preload = ~/Pictures/wallpapers/wallpaper3.jpg
-preload = ~/Pictures/wallpapers/wallpaper2.jpg
+preload = /home/sabir/Pictures/wallpapers/wallpaper3.jpg
+preload = /home/sabir/Pictures/wallpapers/wallpaper2.jpg
 # .. more preloads
  
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = monitor1,~/Pictures/wallpapers/wallpaper3.jpg
+wallpaper = DP-1,/home/sabir/Pictures/wallpapers/wallpaper3.jpg
 #if more than one monitor in use, can load a 2nd image
 # .. more monitors
  
