--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,7 +45,8 @@ $menu = wofi --show drun
 
 exec-once = $terminal
 # exec-once = nm-applet &
- exec-once = waybar & hyprpaper
+exec-once = waybar
+exec-once = hyprpaper
 
 
 #############################
@@ -84,9 +85,9 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 1
 
-    border_size = 2
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
