--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,6 +17,7 @@ $terminal = alacritty
 $fileManager = dolphin
 $menu = wofi --show drun
 $browser = brave
+$browserIncognito = brave --incognito
 
 
 #################
@@ -26,7 +27,8 @@ $browser = brave
 exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets
 exec-once = $terminal
 exec-once = waybar
-exec-once = hyprpaper
+exec-once = swww-daemon
+exec-once = swww img ~/Pictures/wallpapers/21.png
 exec-once = kwalletd5
 
 #############################
@@ -162,6 +164,7 @@ device {
 
 $mainMod = SUPER
 
+bind = $mainMod, W, exec, swww img ~/Pictures/wallpapers/$(ls ~/Pictures/wallpapers/ | shuf -n1)
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
@@ -169,6 +172,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, I, exec, $browserIncognito
 bind = $mainMod, P, pseudo,
 
 bind = $mainMod, H, movefocus, l
