--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,14 +1,6 @@
-preload = /home/sabir/Pictures/wallpapers/wallpaper3.jpg
-preload = /home/sabir/Pictures/wallpapers/wallpaper2.jpg
-# .. more preloads
- 
-#set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = DP-1,/home/sabir/Pictures/wallpapers/wallpaper3.jpg
-#if more than one monitor in use, can load a 2nd image
-# .. more monitors
- 
-#enable splash text rendering over the wallpaper
+preload = /home/sabir/Pictures/wallpapers/1.png
+preload = /home/sabir/Pictures/wallpapers/2.png
+
+wallpaper = DP-1,/home/sabir/Pictures/wallpapers/1.png
+
 splash = true
- 
-#fully disable ipc
-# ipc = off
