--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,7 +30,7 @@ exec-once = waybar
 exec-once = swww-daemon
 exec-once = swww img ~/Pictures/wallpapers/19.png
 exec-once = kwalletd5
-
+exec-once = hyperidle &
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -164,6 +164,7 @@ device {
 
 $mainMod = SUPER
 
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, W, exec, swww img ~/Pictures/wallpapers/$(ls ~/Pictures/wallpapers/ | shuf -n1)
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
