update: ✨ cfg - tmux

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -164,7 +164,7 @@ device {
 
 $mainMod = SUPER
 
-bind = $mainMod, L, exec, hyprlock
+#bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, W, exec, swww img ~/Pictures/wallpapers/$(ls ~/Pictures/wallpapers/ | shuf -n1)
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
