--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,38 +1,71 @@
+# ═══════════════════════════════════════════════════════════════════════════════
+# ████████╗███╗   ███╗██╗   ██╗██╗  ██╗
+# ╚══██╔══╝████╗ ████║██║   ██║╚██╗██╔╝
+#    ██║   ██╔████╔██║██║   ██║ ╚███╔╝ 
+#    ██║   ██║╚██╔╝██║██║   ██║ ██╔██╗ 
+#    ██║   ██║ ╚═╝ ██║╚██████╔╝██╔╝ ██╗
+#    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
+## ══════════════════════════════════════════════════════════════════════════════
+# 🎯 MINIMALISTIC TMUX - Let your terminal & neovim shine
+# ══════════════════════════════════════════════════════════════════════════════
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 🔑 CORE SETTINGS (Your keybindings preserved)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
 set -g prefix C-a
-# tmux shortcut to open a new window named "therminal"
 bind-key t new-window -n "terminal"
-#this help to make esc (go to normal mode from insert) instant
 set -sg escape-time 10
-#source tmux
-bind-key r source-file ~/.tmux.conf; 
-set -g status-style bg=default
-set-option -g status-right ""
-set-option -g status-fg grey
-# act like vim
+bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 🎨 ULTRA MINIMAL STATUS BAR WITH GIT INFO
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+set -g status on
+set -g status-position bottom
+set -g status-style "bg=default,fg=#666666"
+set -g status-interval 2
+
+# Empty left side
+set -g status-left ""
+
+# Just window number and name
+set -g window-status-format "#[fg=#666666]#I #W "
+set -g window-status-current-format "#[fg=#ffffff,bold]#I #W "
+
+# Git branch and status on the right
+set -g status-right-length 100
+set -g status-right "#[fg=#888888]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD 2>/dev/null | sed 's/.*/  &/')#[fg=#ff6b6b]#(cd #{pane_current_path}; git status --porcelain 2>/dev/null | wc -l | sed 's/0//;s/.*/+&/')"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 🖼️ SUBTLE BORDERS
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+set -g pane-border-style "fg=#333333"
+set -g pane-active-border-style "fg=#666666"
+
+# Clean messages
+set -g message-style "bg=default,fg=#ffffff"
+set -g message-command-style "bg=default,fg=#ffffff"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 🎮 VIM NAVIGATION (Your beloved bindings)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
 setw -g mode-keys vi
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-# set tmux to start from 1.
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 🔢 WINDOW & PANE MANAGEMENT
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
 set -g base-index 1
-# # List of plugins
- set -g @plugin 'tmux-plugins/tpm'
- set -g @plugin 'christoomey/vim-tmux-navigator'
- set -g status-position bottom
-#set -g @plugin 'egel/tmux-gruvbox'
-#set -g @tmux-gruvbox 'dark' # or 'light', 'dark-transparent', 'light-transparent'
-# set -g @plugin "janoamaral/tokyo-night-tmux"
-set -g @tokyo-night-tmux_show_datetime 0
-set -g @tokyo-night-tmux_date_format MYD
-set -g @tokyo-night-tmux_time_format 12H
-#add ~/.tmux.conf file  and then run in terminal " tmux source ~/.tmux.conf"
-# git clone tmux-tmp
-# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-# C-a + I to install the tmp plugins
-# the left separator symbol is inversed with a transparent background, you can modify it with any symbol you like
-set -g @dracula-inverse-divider 
-# Switch to window with Alt + 0 to Alt + 7
+set -g pane-base-index 1
+set -g renumber-windows on
 bind -n M-0 select-window -t 0
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
@@ -41,21 +74,38 @@ bind -n M-4 select-window -t 4
 bind -n M-5 select-window -t 5
 bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
-
 bind = split-window -h -p 30
-# Undercurl
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 🔧 TERMINAL SETTINGS (Your setup preserved)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
 set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-
-# fix color error
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 set-option -g default-terminal "tmux-256color"
-# Toggle status bar with prefix + b
-bind b if '[ "$(tmux show -vg status)" = "on" ]' 'set -g status off' 'set -g status on'
-#tmux sessionizer
-bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
-# Alacritty
 set -as terminal-features ",alacritty:RGB"
-# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
 
+# Status bar toggle
+bind b if '[ "$(tmux show -vg status)" = "on" ]' 'set -g status off' 'set -g status on'
+
+# Tmux sessionizer
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 🔌 PLUGINS
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_date_format MYD
+set -g @tokyo-night-tmux_time_format 12H
+set -g @dracula-inverse-divider ""
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 🚀 PLUGIN MANAGER
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+run '~/.tmux/plugins/tpm/tpm'
