--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,9 +1,21 @@
+# ═══════════════════════════════════════════════════════════════════════════════
+#  █████╗ ██╗      █████╗  ██████╗██████╗ ██╗████████╗████████╗██╗   ██╗
+# ██╔══██╗██║     ██╔══██╗██╔════╝██╔══██╗██║╚══██╔══╝╚══██╔══╝╚██╗ ██╔╝
+# ███████║██║     ███████║██║     ██████╔╝██║   ██║      ██║    ╚████╔╝ 
+# ██╔══██║██║     ██╔══██║██║     ██╔══██╗██║   ██║      ██║     ╚██╔╝  
+# ██║  ██║███████╗██║  ██║╚██████╗██║  ██║██║   ██║      ██║      ██║   
+# ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝╚═╝   ╚═╝      ╚═╝      ╚═╝   
+## ══════════════════════════════════════════════════════════════════════════════
+# 🎯 BEAUTIFUL TERMINAL
+# ══════════════════════════════════════════════════════════════════════════════
 [window]
 opacity = 0.5
 padding.x = 5
 padding.y = 5
+
 [font]
 size = 16.0
 normal = { family = "CaskaydiaCove Nerd Font" }
+
 [env]
 term = "xterm-256color"
