--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@
 #    ██║   ██║ ╚═╝ ██║╚██████╔╝██╔╝ ██╗
 #    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 ## ══════════════════════════════════════════════════════════════════════════════
-# 🎯 MINIMALISTIC TMUX - Let your terminal & neovim shine
+# 🎯 MINIMALISTIC TMUX
 # ══════════════════════════════════════════════════════════════════════════════
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
