--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,7 +35,9 @@ exec-once = hyperidle &
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-env = XCURSOR_SIZE,24
+env = XCURSOR_THEME, Bibata-Modern-Ice
+cursor:no_hardware_cursors = true
+env = XCURSOR_SIZE, 24
 env = HYPRCURSOR_SIZE,24
 ###################
 ### PERMISSIONS ###
