--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -1,4 +1,8 @@
-# i3blocks config example
+[git-dotfiles]
+command=~/.config/i3blocks/scripts/git-dotfiles.sh
+interval=30
+signal=13
+
 [disk]
 command=df -h / | awk 'NR==2 {print $4 " free"}'
 interval=60
