--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,9 +3,9 @@ set $mod Mod4
 
 
 #monitors
-exec xrandr --output HDMI-1 --pos 0x0 --output DP-3 --pos 1920x0
+exec_always --no-startup-id xrandr --output DP-2 --primary --mode 1920x1080 --rate 60 --pos 0x0 --output HDMI-1 --mode 1920x1080 --rate 60 --pos 1920x0
 set $fm HDMI-1
-set $sm DP-3
+set $sm DP-2
 # Font for window titles and bar
 font pango:monospace 8
 
