--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,12 +80,12 @@ bind = split-window -h -p 30
 # 🔧 TERMINAL SETTINGS (Your setup preserved)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-set-option -g default-terminal "tmux-256color"
+# set -g default-terminal "${TERM}"
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+set -g default-terminal "tmux-256color"
 set -as terminal-features ",alacritty:RGB"
-
+set -ga terminal-overrides ",*:Tc"
 # Status bar toggle
 bind b if '[ "$(tmux show -vg status)" = "on" ]' 'set -g status off' 'set -g status on'
 
