--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,7 @@ set -g status on
 set -g status-position bottom
 set -g status-style "bg=default,fg=#666666"
 set -g status-interval 2
-
+set -g mouse on
 # Empty left side
 set -g status-left ""
 
@@ -104,6 +104,8 @@ set -g @tokyo-night-tmux_date_format MYD
 set -g @tokyo-night-tmux_time_format 12H
 set -g @dracula-inverse-divider ""
 
+# Pass Ctrl+` through to the application when in Neovim
+bind-key -n C-` send-keys C-`
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 🚀 PLUGIN MANAGER
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
